--- a/app/src/main/res/layout/comments.xml
+++ b/app/src/main/res/layout/comments.xml
@@ -4,15 +4,35 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:id="@+id/commentlayout"
-    android:layout_marginTop="5dp">
+    android:layout_marginTop="10dp">
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingVertical="5dp">
+
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Author"
         android:textStyle="bold"
-        android:paddingVertical="5dp"
-        android:id="@+id/commnetauth"
-        />
+        android:paddingVertical="0dp"
+        android:paddingHorizontal="5dp"
+        android:id="@+id/commnetauth"/>
+        <View
+            android:layout_width="1dp"
+            android:paddingHorizontal="5dp"
+            android:background="@color/black"
+            android:layout_height="match_parent"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Author"
+
+            android:paddingHorizontal="5dp"
+            android:id="@+id/commnetdate"/>
+    </LinearLayout>
+
     <TextView
         android:layout_width="match_parent"
         android:background="@drawable/commentsbg"
