Bug fiex of theme

--- a/app/src/main/res/layout/item_search_result.xml
+++ b/app/src/main/res/layout/item_search_result.xml
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="left"
         android:textSize="20sp"
+        android:textColor="@color/black"
         android:textStyle="bold"
         android:text="Heelo this the title of the News "
         android:paddingHorizontal="20dp"
@@ -33,6 +34,7 @@
             android:layout_height="wrap_content"
             android:text="points"
             android:textSize="12sp"
+            android:textColor="@color/black"
             android:paddingHorizontal="10dp"/>
         <View
             android:layout_width="1dp"
@@ -43,6 +45,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Author"
+            android:textColor="@color/black"
             android:textSize="12sp"
             android:paddingHorizontal="10dp"/>
         <View
@@ -53,7 +56,8 @@
             android:id="@+id/dateTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text=" Years agao"
+            android:text=" Years ago"
+            android:textColor="@color/black"
             android:textSize="12sp"
             android:paddingHorizontal="10dp"/>
         <View
@@ -65,6 +69,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Comments"
+            android:textColor="@color/black"
             android:textSize="12sp"
             android:maxLines="1"
             android:paddingHorizontal="10dp"
