--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,7 @@
             android:layout_marginHorizontal="15dp"
             android:layout_marginTop="10dp"
             android:inputType="text"
+            android:textColor="@color/black"
             android:drawablePadding="8dp"
             android:drawableStart="@drawable/ic_serch"
             android:hint="Search news"
