--- a/app/src/main/res/layout/activity_post_details.xml
+++ b/app/src/main/res/layout/activity_post_details.xml
@@ -20,6 +20,7 @@
         android:layout_height="wrap_content"
         android:textSize="20sp"
         android:textStyle="bold"
+        android:textColor="@color/black"
         android:text="Hello world this koltin appicaltion have nice day"
         android:padding="10dp"/>
     <TextView
@@ -48,6 +49,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="points"
+            android:textColor="@color/black"
             android:textSize="12sp"
             android:paddingHorizontal="10dp"/>
         <View
@@ -60,6 +62,7 @@
             android:layout_height="wrap_content"
             android:text="Author"
             android:textSize="12sp"
+            android:textColor="@color/black"
             android:paddingHorizontal="10dp"/>
 
 
@@ -77,6 +80,7 @@
         android:layout_height="wrap_content"
         android:text="Commnets"
         android:paddingVertical="10dp"
+        android:textColor="@color/black"
         android:textStyle="bold"
         android:paddingHorizontal="20dp"/>
 
