--- a/app/src/main/res/layout/comments.xml
+++ b/app/src/main/res/layout/comments.xml
@@ -15,6 +15,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Author"
+        android:textColor="@color/black"
         android:textStyle="bold"
         android:paddingVertical="0dp"
         android:paddingHorizontal="5dp"
@@ -28,7 +29,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Author"
-
+            android:textColor="@color/black"
             android:paddingHorizontal="5dp"
             android:id="@+id/commnetdate"/>
     </LinearLayout>
@@ -40,6 +41,7 @@
         android:id="@+id/postcommnet"
         android:paddingHorizontal="7dp"
         android:paddingTop="10dp"
+        android:textColor="@color/black"
         android:gravity="center_vertical"
         />
 
